--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -170,7 +170,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,8 +188,8 @@
 
         <EditText
             android:id="@+id/textNusha"
-            android:layout_width="108dp"
-            android:layout_height="28dp"
+            android:layout_width="109dp"
+            android:layout_height="33dp"
             android:layout_marginTop="8dp"
             android:text=""
             android:textSize="18sp"
@@ -212,7 +212,7 @@
         <EditText
             android:id="@+id/textPaciente"
             android:layout_width="73dp"
-            android:layout_height="30dp"
+            android:layout_height="37dp"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:text=""
@@ -224,11 +224,11 @@
 
         <EditText
             android:id="@+id/textEdad"
-            android:layout_width="72dp"
-            android:layout_height="28dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginTop="12dp"
+            android:layout_width="74dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="4dp"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
@@ -252,7 +252,7 @@
         <EditText
             android:id="@+id/textNHC"
             android:layout_width="107dp"
-            android:layout_height="29dp"
+            android:layout_height="35dp"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
@@ -368,15 +368,17 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
+        android:alpha="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_face_24px" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/LayoutDatos1"
         android:layout_width="484dp"
         android:layout_height="254dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LayoutDatosMain">
 
@@ -507,7 +509,6 @@
             app:layout_constraintTop_toBottomOf="@+id/radioHTA" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <ImageView
         android:id="@+id/logoSAS"
         android:layout_width="115dp"
@@ -515,5 +516,17 @@
         android:src="@drawable/unnamed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
