--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,158 +14,181 @@
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="32dp"
-        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/LayoutDatos1"
         app:layout_constraintTop_toBottomOf="@+id/LayoutDatosMain"
-        tools:visibility="gone">
+        >
 
         <RadioButton
-            android:id="@+id/radioHTA16"
-            android:layout_width="63dp"
-            android:layout_height="22dp"
+            android:id="@+id/radioFiebre"
+            android:layout_width="115dp"
+            android:layout_height="38dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Fiebre"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="23dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA13"
+            android:id="@+id/radioDiarrea"
             android:layout_width="76dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Diarrea"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="98dp"
             tools:layout_editor_absoluteY="44dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA15"
+            android:id="@+id/radioDisnea"
             android:layout_width="66dp"
             android:layout_height="19dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Disnea"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="65dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA20"
+            android:id="@+id/radioAstenia"
             android:layout_width="69dp"
             android:layout_height="20dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Astenia"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="98dp"
             tools:layout_editor_absoluteY="65dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA11"
+            android:id="@+id/radioCardiopatia"
             android:layout_width="91dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Cardiopatía"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="148dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA12"
+            android:id="@+id/radionNauseas"
             android:layout_width="93dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Nauseas"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="98dp"
             tools:layout_editor_absoluteY="23dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA17"
+            android:id="@+id/radioCongestion"
             android:layout_width="88dp"
             android:layout_height="24dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Congestión nasal"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="35dp"
             tools:layout_editor_absoluteY="85dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA18"
+            android:id="@+id/radioCefalea"
             android:layout_width="82dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Cefalea"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="106dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA19"
+            android:id="@+id/radioTos"
             android:layout_width="52dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Tos"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="44dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA22"
+            android:id="@+id/radioRash"
             android:layout_width="69dp"
             android:layout_height="20dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Rash"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="99dp"
             tools:layout_editor_absoluteY="104dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA21"
+            android:id="@+id/radioMialgias"
             android:layout_width="69dp"
             android:layout_height="20dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Mialgias"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="99dp"
             tools:layout_editor_absoluteY="85dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA14"
+            android:id="@+id/radioHemoptisis"
             android:layout_width="88dp"
             android:layout_height="21dp"
             android:checked="false"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:text="Hemoptisis"
-            android:textSize="30dp"
+            android:fontFamily="casual"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="127dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/botonGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -391,11 +414,11 @@
             android:text="HTA"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/radioHTA2"
+            app:layout_constraintStart_toStartOf="@+id/radioDM"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioButton
-            android:id="@+id/radioHTA10"
+            android:id="@+id/radioCardio"
             android:layout_width="191dp"
             android:layout_height="40dp"
             android:checked="false"
@@ -405,11 +428,11 @@
             android:text="Cardiopatía"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA5"
+            app:layout_constraintTop_toBottomOf="@+id/radioECV"
             tools:layout_editor_absoluteX="1dp" />
 
         <RadioButton
-            android:id="@+id/radioHTA6"
+            android:id="@+id/radioTabaco"
             android:layout_width="286dp"
             android:layout_height="45dp"
             android:checked="false"
@@ -423,7 +446,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioButton
-            android:id="@+id/radioHTA3"
+            android:id="@+id/radioEPOC"
             android:layout_width="286dp"
             android:layout_height="38dp"
             android:checked="false"
@@ -433,11 +456,11 @@
             android:text="EPOC"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/radioHTA2"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA6" />
+            app:layout_constraintStart_toEndOf="@+id/radioDM"
+            app:layout_constraintTop_toBottomOf="@+id/radioTabaco" />
 
         <RadioButton
-            android:id="@+id/radioHTA8"
+            android:id="@+id/radioERC"
             android:layout_width="191dp"
             android:layout_height="37dp"
             android:checked="false"
@@ -447,11 +470,11 @@
             android:text="ERC"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/radioHTA7"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA2" />
+            app:layout_constraintStart_toStartOf="@+id/radioCancer"
+            app:layout_constraintTop_toBottomOf="@+id/radioDM" />
 
         <RadioButton
-            android:id="@+id/radioHTA4"
+            android:id="@+id/radioInmuno"
             android:layout_width="286dp"
             android:layout_height="36dp"
             android:checked="false"
@@ -461,11 +484,11 @@
             android:text="Inmunosupresión"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/radioHTA8"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA3" />
+            app:layout_constraintStart_toEndOf="@+id/radioERC"
+            app:layout_constraintTop_toBottomOf="@+id/radioEPOC" />
 
         <RadioButton
-            android:id="@+id/radioHTA7"
+            android:id="@+id/radioCancer"
             android:layout_width="191dp"
             android:layout_height="43dp"
             android:checked="false"
@@ -475,11 +498,11 @@
             android:text="Cáncer"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/radioHTA5"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA8" />
+            app:layout_constraintStart_toStartOf="@+id/radioECV"
+            app:layout_constraintTop_toBottomOf="@+id/radioERC" />
 
         <RadioButton
-            android:id="@+id/radioHTA5"
+            android:id="@+id/radioECV"
             android:layout_width="191dp"
             android:layout_height="44dp"
             android:checked="false"
@@ -489,11 +512,11 @@
             android:text="ECV"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/radioHTA10"
-            app:layout_constraintTop_toBottomOf="@+id/radioHTA7" />
+            app:layout_constraintStart_toStartOf="@+id/radioCardio"
+            app:layout_constraintTop_toBottomOf="@+id/radioCancer" />
 
         <RadioButton
-            android:id="@+id/radioHTA2"
+            android:id="@+id/radioDM"
             android:layout_width="191dp"
             android:layout_height="38dp"
             android:checked="false"
@@ -503,7 +526,7 @@
             android:text="DM"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/radioHTA8"
+            app:layout_constraintStart_toStartOf="@+id/radioERC"
             app:layout_constraintTop_toBottomOf="@+id/radioHTA" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
